--- a/application.yml
+++ b/application.yml
@@ -6,7 +6,7 @@ spring:
     banner-mode: log
 lavalink:
   server:
-    password: "DYNAMICPASSWORD"
+    password: "kisaragiisthebestgirl"
     sources:
       youtube: true
       bandcamp: true
@@ -15,7 +15,7 @@ lavalink:
       vimeo: true
       mixer: true
       http: true
-      local: false
+      local: true
     bufferDurationMs: 400
     youtubePlaylistLoadLimit: 3
     youtubeSearchEnabled: true
